css/common.css
.clear {
    clear: both;
}

.button {
    margin-top: 25px;
    padding: 12px 24px;
    border-width: 4px;
    border-style: solid;
    border-radius: 30px;
    font-size: 20px;
    font-weight: 600;
    display: block;
    transition: 0.3s all;
}

.button:hover,
.button:active {
    text-decoration: none;
}

/* Typography */

.display,
.title,
.description,
.caption,
.button {
    font-family: 'Montserrat Alternates', sans-serif;
    line-height: 130%;
}

.display {
    font-size: 84px;
    font-weight: 800;
}

.title {
    font-size: 32px;
    font-weight: 600;
}

.description {
    font-size: 20px;
    font-weight: 400;
}

.description .bold {
    font-weight: 600;
}

.caption {
    font-size: 16px;
    font-weight: 400;
}

.z-no-line {
    font-family: 'Montserrat', sans-serif;
}

/* Color Scheme */

.text-color-primary,
#contact-form .form-control,
#contact-form .form-control:focus,
#footer input:focus,
#footer input::placeholder,
.button,
.underline:hover {
    color: #828282;
}

#footer input:-ms-input-placeholder {
    color: #828282;
}

#footer input::-ms-input-placeholder {
    color: #828282;
}

.button,
.is-default,
#footer .social-media a,
.form-control:focus {
    border-color: #828282;
}

#footer .social-media a:hover,
.button:hover,
.underline:after {
    background-color: #828282;
}

.text-color-white {
    color: #fafafa;
}

.bg-color-primary,
#contact-form .form-control:focus,
#footer input:focus {
    background-color: #fafafa;
}

#footer .input button:active,
#footer .social-media a:active,
.button:active {
    border-color: #676767;
}

#footer .input button:active,
#footer .social-media a:active,
.button:active,
.underline:active:after {
    background-color: #676767;
}

#footer .links a:active,
#navbar .links a:active {
    color: #676767;
}

#footer .input button:active, 
#footer .social-media a:hover > i,
#footer .social-media a:active,
.button:hover,
.button:active {
    color: white;
}

#navbar,
.info .content > div,
.section-banner,
#contact-form .inner,
#footer {
    z-index: 10;
    position: relative;
    box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
}

.form-control:focus {
    box-shadow: 0 0 0 0.2rem rgba(130, 130, 130,.25);
}

/* Underline */

.underline {
    position: relative;
}

.underline:after {
    content: "";
    position: absolute;
    right: 0;
    width: 0;
    bottom: -5px;
    height: 2px;
    transition-property: width;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
    border-radius: 2px;
}

.underline:hover {
    text-decoration: none;
}

.underline:hover:after,
.underline:focus:after,
.underline:active:after {
    left: 0;
    right: auto;
    width: 100%;
}

/* Gradient Background */

.gradient-bg {
    background: linear-gradient(135deg,
        #2E3192, #00AEEF, /* blueberry basil */
        #F7941D, #F9ED32, /* lemon ginger */
        #9E1F63, #ED1C24 /* apple mint */
    );
    background-size: 1200vw 60vh;

    -webkit-animation: gradient-animation 60s ease infinite;
    -moz-animation: gradient-animation 60s ease infinite;
    animation: gradient-animation 60s ease infinite;
}

@-webkit-keyframes gradient-animation {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 00% 50%;
    }
}
@-moz-keyframes gradient-animation {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}
@keyframes gradient-animation {
    0% {
        background-position: 10% 50%;
    }
    50% {
        background-position: 90% 50%;
    }
    100% {
        background-position: 10% 50%;
    }
}

/* Navbar */

/*
#navbar .container {
    display: flex;
    justify-content: space-between;
    padding-top: 10px;
    padding-bottom: 12px;
}
*/

#navbar .center {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
}


#navbar .links {
    display: flex;
    align-items: center;
    font-size: 24px;
}

#navbar .links,
#navbar img {
    height: 70px;
}

#navbar .nav-link {
    padding: 0;
}


#navbar .gradient-bg {
    position: absolute;
    z-index: 0;
    margin: 1px;
    height: 68px;
    width: 68px;
}

#navbar img {
    position: relative;
    z-index: 1;
}

#navbar .links {
    display: flex;
}

#navbar .navbar-collapse {
    justify-content: space-between;
}

#navbar .container {
    justify-content: flex-end;
}

#navbar .navbar-toggler {
    border: 0;
}

#navbar button:focus {
    outline: 5px auto rgba(130, 130, 130, 0.5);
}

#navbar .navbar-toggler {
    margin: 8px 0;
}

#navbar {
    padding: 10px 0 12px 0;
}

#navbar .center {
    top: 45px;
}

@media (max-width: 991px) { 
    #navbar .show,
    #navbar .collapsing {
        display: flex;
        justify-content: center;
    }
    #navbar .navbar-collapse {
        padding-top: 12px;
    }
    #navbar .container {
        padding: 8px 0;
    }
}

@media (max-width: 549px) {

}

@media (min-width: 550px) and (max-width: 768px) {
    #navbar .links:first-child,
    #navbar .links div:first-child {
        margin-right: 45px;
    }
}

@media (min-width: 769px) and (max-width: 991px) {
    #navbar .links:first-child,
    #navbar .links div:first-child {
        margin-right: 90px;
    }
}

@media (min-width: 992px) {
    #navbar .links div:first-child {
        margin-right: 90px;
    }
    
}

/* Jumbotron section */

#jumbotron .container {
    display: flex;
    justify-content: space-between;
}

#jumbotron .text {
    display: flex;
    align-items: center;
}

/* Info section */

.info {
    padding: 100px 0;
}

.info .container {
    position: relative;
}

.info .content {
    width: 50%;
    height: 100%;
    z-index: 1;
    position: absolute;
    display: flex;
    align-items: center;
}

.info .content > div {
    padding: 50px 75px;
}

.info .content .subtitle {
    margin-bottom: 5px;
}

.info img {
    width: 70%;
}

@media (max-width: 992px) and (min-width: 768px) {
    .info .title {
        font-size: 20px;
    }
    
    .info .description {
        margin-top: 5px;
        font-size: 16px;
    }
    
    .info .button { 
        margin-top: 15px;
        font-size: 16px;
    }
    
    .info .content > div {
        padding: 24px 35px;
    }
}

@media (max-width: 767px) {
    .info .container {
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
    }
    .info .content {
        margin: -100px auto 0 auto;
        width: 80%;
        height: 100%;
        position: relative;
        left: 0;
        right: 0;
    }
    .info .description {
        font-size: 16px;
        margin-top: 5px;
    }
    .info img {
        width: 100%;
    }
}

@media (max-width: 550px) {
    .info .content > div {
        padding: 25px 30px;
    }
    .info .content {
        margin: -50px auto 0 auto;
        width: 90%;
    }
}

@media (max-width: 350px) { 
    .info .content {
        margin: 25px auto 0 auto;
        width: 100%;
    }
}

/* Right Info section */

.info.right .content {
    right: 15px;
}

/* Left Info section */

.info.left img {
    float: right;
}

/* Photo Highlights section */

#photo-highlights .col {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

@media (min-width: 451px) {
    #photo-highlights .row {
        height: 100%;
    }
    
    #photo-highlights .col {
        height: 33vw;
    }
}

@media (max-width: 450px){
    #photo-highlights .row {
        width: 100vw;
        height: 200vw;
        flex-direction: column;
    } 
}

/* Section Banner sections */

.section-banner {
    text-align: center;
    padding: 30px 0;
}

.section-banner br {
    display: none;        
}

@media (max-width: 450px) {
    .section-banner .title {
        font-size: 24px;
    }
}

/* Footer */

#footer {
    padding: 30px 0
}

#footer .links {
    display: flex;
    align-items: center;
    font-size: 24px;
}

#footer .links div:first-child {
    margin-right: 90px;
}

#footer .links,
#footer form {
    height: 63px;
}

#footer .input {
    text-align: center;
}

#footer input {
    border-width: 2px 0 2px 2px;
    border-style: solid;
}

#footer input::placeholder {
    opacity: 1;
}

#footer .input > div:nth-child(1) {
    padding-bottom: 5px;
}

#footer .input button {
    border-width: 2px;
    font-size: 14px;
}

#footer .input button:active{
    text-decoration: none;
}

#footer .social-media {
    display: flex;
    align-items: center;
}

#footer .social-media a {
    border-width: 2px;
    border-style: solid;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    text-align: center;
    padding: 2px 0;
}

#footer .social-media a,
#footer .social-media a i {
    transition: 0.3s all;
}

#footer .social-media a:not(:last-child) { 
    margin-right: 40px;
}

#footer .social-media a:hover{
    text-decoration: none;
}

#footer .social-media a:active{
    text-decoration: none;
}



@media (min-width: 768px) and (max-width: 991px) {
    #footer .links div:first-child,
    #footer .social-media a:not(:last-child) {
        margin-right: 30px;
    }
}

@media (min-width: 768px) {
    #footer form {
        position: absolute;
        top: 50%;
        left: 50%;
        -webkit-transform: translate(-50%,-50%);
        transform: translate(-50%,-50%);
    }   
    #footer > .container {
        display: flex;
        justify-content: space-between;
    }
}

@media (max-width: 767px) {
    #footer > .container {
        display: flex;
        flex-direction: column;
    }
    #footer form {
        order: -1;
    }
    #footer .input-group {
        margin: 0 auto;
        max-width: 300px;
    }
    #footer .links,
    #footer .social-media {
        justify-content: center;
    }
    #footer .links {
        margin-bottom: 8px;
    }
    #footer .links div:first-child {
        margin-right: 40px;
    }
}

@media (max-width: 398px) {
    #footer .caption {
        font-size: 10px;
    }
}

